--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.google.firebase:firebase-storage:16.0.3'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
